src/objects/HCC_Codes__c/HCC_Codes__c.object-meta.xml
<CustomObject>
    <label>HCC-Codes</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>HCC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HCC-Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>