src/objects/HCC_Codes__c/fields/Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expired Date</label>
    <type>Date</type>
</CustomField>