src/objects/HCC_Codes__c/fields/HCC_Category__c.field-meta.xml
<CustomField>
    <fullName>HCC_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HCC Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>