src/objects/HCC_Codes__c/fields/HCC_Description__c.field-meta.xml
<CustomField>
    <fullName>HCC_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HCC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>